--- a/packages.config
+++ b/packages.config
@@ -13,4 +13,6 @@
   <package id="NAudio.WinMM" version="2.0.1" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" />
+  <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net472" />
+  <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net472" />
 </packages>
