--- a/SoundReader.csproj
+++ b/SoundReader.csproj
@@ -130,10 +130,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="TabControlMenu.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <Resource Include="TabControlMenu.xaml">
       <SubType>Designer</SubType>
-    </Page>
+      <Generator>MSBuild:Compile</Generator>
+    </Resource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Render.xaml.cs">
